- Fix the entry for Ubuntu 10.04 in supported_distros.txt
- Fix a base prereq (mysql-server) for Debian 5.
- Fix the list of base prereqs for RHEL 5 systems.
- [Ticket #601] On Debian systems, we can now use mysql-server without 
specifying any version for the base prereqs.
- [Ticket #600] Fix a dependency issue with the LAM OPKG on RPM based systems.

6.1.0:
- Update C3 to 5.1.0.
- Update ODA to 1.4.15.
- Update OPKGC to 0.5.0.
- Update PackMan to 3.2.0.
- Update Selector to 1.2.6.
- Update sync_file to 2.5.8.
- Update SystemInstaller to 2.4.11.
- [Ticket #143] Node are correctly sorted when generating the C3 configuration
file.
- [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
file when a failure occurs during the image creation.
- [Ticket #516] Make sure the systemimager-server-monitord service starts
correctly.
- [Ticket #525] Improve the management of /etc/hosts on the headnode.
- [Ticket #526] Improve system sanity when deleting clients: DHCP is now
correctly handled. 
- [Ticket #557] Fix problems after deleting compute nodes.
- [Ticket #581] Make sure that included OPKGs are removed when starting over.
- [Ticket #595] get-oscar-version.sh now checks whether the version file exists or not.
- [Ticket #597] Bootstrapping now updates OPKGs data rather than duplicating
the data for all OPKGs.
- Fix the definition of base prereqs for Debian-based systems.

6.0.6:
- Update ODA to 1.4.14.
- Update OPKG OpenMPI to 1.3.0.
- Update RAPT to 2.8.8.
- [Ticket #549] Create the .master script for SystemImager for images created
using the CLI.
- [Ticket #583] Remove hosts from SSH known_hosts when deleting clients.
- [Ticket #586] Fix problem when using ssh -v to connect to clients.
- [Ticket #591] Add a dependency to syslinux to the oscar-base-scripts RPM. 
- Fix issues when detecting the OSCAR version.
- Add the support of ubuntu-1004-x86_64.

6.0.5:
- Update Configurator to 1.0.5.
- Update OPKG C3 to 4.1.4.
- Update OPKG Ganglia to 3.0.10.